--- a/package.json
+++ b/package.json
@@ -4,18 +4,10 @@
   "description": "Provides information about online tracking",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    // "build": "webpack",
-    // "watch": "webpack -w",
-    // "web-ext": "web-ext run -s extension/",
+    "lint": "eslint .",
     "start": "web-ext run"
   },
   "devDependencies": {
-    // "babel-core": "^6.25.0",
-    // "babel-loader": "^7.1.0",
-    // "babel-preset-env": "^1.5.2",
-    // "jquery": "^3.2.1",
-    // "webextension-polyfill": "^0.1.1",
-    // "webpack": "^2.3.2",
-    // "webpack-webext-plugin": "github:rpl/webpack-webext-plugin"
+    "eslint": "^4.0.0"
   }
 }
