--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,10 @@
         "webextensions": true,
         "jquery": true
     },
+    "parserOptions": {
+        "ecmaVersion": 8,
+        "sourceType": "module"
+    },
     "extends": [
       "eslint:recommended"
     ]
