pass page content to background script for inferencing

--- a/manifest.json
+++ b/manifest.json
@@ -22,9 +22,20 @@
             "lib/jquery-3.2.1.min.js",
             "lib/lovefield.min.js",
             "background_scripts/datastore.js",
+            "background_scripts/inferencing.js",
             "background_scripts/webrequest.js"
         ]
     },
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": [
+                "lib/browser-polyfill.min.js", 
+                "content_scripts/inferencing.js"
+            ],
+            "run_at": "document_idle"
+        }
+    ],
     "icons": {
         "128": "icons/super-128.png",
         "16": "icons/super-16.png",
