rework requests queue

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
     "permissions": [
         "tabs",
         "webRequest",
+        "webRequestBlocking",
         "<all_urls>"
         ],
     "browser_action": {
@@ -31,7 +32,7 @@
             "matches": ["<all_urls>"],
             "js": [
                 "lib/browser-polyfill.min.js", 
-                "content_scripts/inferencing.js"
+                "content_scripts/content_script.js"
             ],
             "run_at": "document_idle"
         }
