--- a/package.json
+++ b/package.json
@@ -5,9 +5,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
+    "build": "webpack",
     "start": "web-ext run"
   },
   "devDependencies": {
-    "eslint": "^4.0.0"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "babel-preset-node6": "^11.0.0",
+    "eslint": "^4.0.0",
+    "html-entities": "^1.2.1",
+    "jshint": "^2.9.4",
+    "node-readability": "^2.2.0",
+    "readability": "github:mozilla/readability",
+    "striptags": "^3.0.1",
+    "then-request": "^3.1.0",
+    "tokenize-text": "^1.1.3",
+    "webpack": "^3.0.0"
   }
 }
