--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,11 @@
     "manifest_version": 2,
     "name": "Tracking Transparency",
     "version": "1.0.0",
+    "applications": {
+        "gecko": {
+            "id": "trackingtransparency@super.cs.uchicago.edu"
+        }
+    },
     "description": "Provides information about online tracking",
     "permissions": [
         "tabs",
