--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Tracking Transparency",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "applications": {
         "gecko": {
             "id": "trackingtransparency@super.cs.uchicago.edu"
@@ -12,6 +12,7 @@
         "tabs",
         "webRequest",
         "webRequestBlocking",
+        "webNavigation",
         "<all_urls>"
         ],
     "browser_action": {
