--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
         "browser": true,
         "es6": true,
         "webextensions": true,
-        "jquery": true
+        "jquery": true,
+        "worker": true
     },
     "parserOptions": {
         "ecmaVersion": 8,
