--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint .",
     "build": "webpack",
     "watch": "webpack -w",
-    "start": "web-ext run -s extension/"
+    "start": "web-ext run -s extension/ -f firefoxdeveloperedition"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -20,5 +20,8 @@
     "striptags": "^3.0.1",
     "tokenize-text": "^1.1.3",
     "webpack": "^3.0.0"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.23.0"
   }
 }
