--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Provides information about online tracking",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start --browsers Firefox,Chrome --single-run",
     "lint": "eslint .",
     "build": "webpack",
     "watch": "webpack -w",
@@ -15,8 +15,15 @@
     "babel-plugin-transform-eval": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
+    "chai": "^4.1.0",
     "eslint": "^4.0.0",
     "html-entities": "^1.2.1",
+    "karma": "^1.7.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^3.4.2",
     "readability": "github:mozilla/readability",
     "striptags": "^3.0.1",
     "tokenize-text": "^1.1.3",
