--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "karma-mocha": "^1.3.0",
     "mocha": "^3.4.2",
     "readability": "github:mozilla/readability",
+    "sinon-chrome": "^2.2.1",
     "striptags": "^3.0.1",
     "tokenize-text": "^1.1.3",
     "webpack": "^3.0.0"
