--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -29,6 +29,7 @@
             "lib/browser-polyfill.min.js",
             "lib/parseUri.js",
             "lib/jquery-3.2.1.min.js",
+            "background_scripts/userstudy.js",
             "background_scripts/background.js",
             "background_scripts/popup_connector.js"
         ]
