trying to get overlay working

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -39,13 +39,14 @@
             "matches": ["<all_urls>"],
             "css": [
                 "lib/boundary/boundary.css",
-                "your-stylesheet-for-boxes.css"
+                "stylesheets/overlay.css"
             ],
             "js": [
                 "lib/browser-polyfill.min.js", 
                 "lib/parseUri.js",
                 "lib/jquery-3.2.1.min.js",
                 "lib/boundary/boundary.js",
+                "dist/overlay.js",
                 "dist/content_script.js"
             ],
             "run_at": "document_idle",
