--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -57,6 +57,10 @@
         "page": "options/options.html",
         "browser_style": true
     },
+    "web_accessible_resources": [
+        "lib/boundary/boundary.css",
+        "stylesheets/overlay-inner.css"
+    ],
     "icons": {
         "128": "icons/super-128.png",
         "16": "icons/super-16.png",
