--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "sinon-chrome": "^2.2.1",
     "striptags": "^3.0.1",
     "tokenize-text": "^1.1.3",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "worker-loader": "^0.8.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
-    "babel-runtime": "^6.23.0"
+    "babel-runtime": "^6.23.0",
+    "jquery": "^3.2.1",
+    "lovefield": "^2.1.12",
+    "webextension-polyfill": "^0.1.1"
   }
 }
