--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -49,7 +49,8 @@
     ],
     "options_ui": {
         "page": "options/options.html",
-        "browser_style": true
+        "browser_style": true,
+        "chrome_style": true
     },
     "web_accessible_resources": [
     ],
