--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,6 +8,7 @@
         }
     },
     "description": "Provides information about online tracking",
+    "author": "University of Chicago SUPERgroup",
     "permissions": [
         "storage",
         "unlimitedStorage",
@@ -29,7 +30,8 @@
             "lib/browser-polyfill.min.js",
             "dist/userstudy.js",
             "dist/background.js"
-        ]
+        ],
+        "persistent": true
     },
     "content_scripts": [
         {
