--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.23.0",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "lovefield": "^2.1.12",
     "webextension-polyfill": "^0.1.1"
   }
