--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "chai": "^4.1.0",
+    "css-loader": "^0.28.7",
     "eslint": "^4.0.0",
     "html-entities": "^1.2.1",
     "jsdoc": "^3.5.4",
@@ -29,6 +30,7 @@
     "readability": "github:mozilla/readability",
     "sinon-chrome": "^2.2.1",
     "striptags": "^3.0.1",
+    "style-loader": "^0.19.0",
     "tokenize-text": "^1.1.3",
     "webpack": "^3.0.0",
     "worker-loader": "^0.8.1"
@@ -36,9 +38,12 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.23.0",
+    "bootstrap": "4.0.0-beta",
+    "d3": "^4.11.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "lovefield": "^2.1.12",
+    "popper.js": "^1.12.5",
     "webextension-polyfill": "^0.1.1"
   }
 }
