--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-runtime": "^6.23.0",
     "bootstrap": "4.0.0-beta",
     "d3": "^4.11.0",
+    "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "lovefield": "^2.1.12",
