--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "striptags": "^3.0.1",
     "style-loader": "^0.19.0",
     "tokenize-text": "^1.1.3",
-    "webpack": "^3.0.0",
-    "worker-loader": "^0.8.1"
+    "webpack": "^3.0.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
@@ -45,6 +44,8 @@
     "lodash": "^4.17.4",
     "lovefield": "^2.1.12",
     "popper.js": "^1.12.5",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "webextension-polyfill": "^0.2.1"
   }
 }
