--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "bootstrap": "4.0.0-beta",
     "d3": "^4.11.0",
