fix browser polyfill in chrome backing out 62907bcc33f93f821de3ee1ee64aca3978d14812 and e9e8cd52dba242cba8f83afa62d8e1b413e01d08 was not able to find a way to bundle with webpack

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -27,6 +27,7 @@
     },
     "background": {
         "scripts": [
+            "lib/browser-polyfill.min.js",
             "dist/userstudy.js",
             "dist/background.js"
         ],
@@ -40,6 +41,7 @@
                 "stylesheets/overlay.css"
             ],
             "js": [
+                "lib/browser-polyfill.min.js",
                 "dist/overlay_cs.js",
                 "dist/inferencing_cs.js"
             ],
