adding react-router to attempt to get nav

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "popper.js": "^1.12.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2",
     "webextension-polyfill": "^0.2.1"
   }
 }
