--- a/package.json
+++ b/package.json
@@ -38,15 +38,20 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.23.0",
-    "bootstrap": "4.0.0-beta",
+    "bootstrap": "^3.3.7",
     "d3": "^4.11.0",
+    "file-loader": "^1.1.5",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "lovefield": "^2.1.12",
     "popper.js": "^1.12.5",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
+    "unidata10": "^10.0.1",
+    "url-loader": "^0.6.2",
     "webextension-polyfill": "^0.2.1"
   }
 }
