--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["env", "react"],
-    "plugins": ["transform-eval", "transform-runtime"]
+    "plugins": ["transform-eval", "transform-runtime", "transform-object-rest-spread"]
 }
