--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "webpack": "^3.0.0"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "bootstrap": "^3.3.7",
     "d3": "^4.11.0",
+    "eslint-plugin-react": "^7.5.1",
     "file-loader": "^1.1.5",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
