--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
+    "react-vis": "^1.8.0",
     "url-loader": "^0.6.2",
     "webextension-polyfill": "^0.2.1"
   }
