fix more lint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
       "plugin:react/recommended"
     ],
     "rules": {
-        "no-console": 1
+        "no-console": 1,
+        "react/prop-types": 0
   }
 }
