--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-minify-webpack-plugin": "^0.2.0",
     "babel-plugin-transform-eval": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -36,7 +37,6 @@
     "mocha": "^3.4.2",
     "sinon-chrome": "^2.2.1",
     "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.1.4",
     "url-loader": "^0.6.2",
     "web-ext": "^2.2.2",
     "webpack": "^3.10.0",
