--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "@axetroy/react-download": "^1.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bootstrap": "^3.3.7",
@@ -51,6 +52,7 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "lovefield": "^2.1.12",
+    "proptypes": "^1.1.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
