working download using webextension downloads api

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -12,6 +12,7 @@
     "permissions": [
         "storage",
         "unlimitedStorage",
+        "downloads",
         "tabs",
         "webRequest",
         "webNavigation",
