--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Provides information about online tracking",
   "scripts": {
-    "test": "karma start --browsers Firefox,Chrome --single-run",
+    "test": "cd test && node test.js",
     "lint:eslint": "eslint .",
     "lint:webext": "web-ext lint -s extension/",
     "lint": "npm run lint:eslint; npm run lint:webext",
@@ -23,18 +23,12 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "chai": "^4.1.2",
     "css-loader": "^0.28.8",
     "eslint": "^4.15.0",
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^1.1.6",
     "jsdoc": "^3.5.5",
-    "karma": "^1.7.1",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-mocha": "^1.3.0",
-    "mocha": "^3.4.2",
+    "puppeteer": "^1.0.0",
     "sinon-chrome": "^2.2.1",
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
@@ -50,6 +44,7 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "lovefield": "^2.1.12",
+    "parseuri": "^0.0.5",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
