convert popup to react

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -23,7 +23,7 @@
         "19": "icons/super-19.png",
         "38": "icons/super-38.png"
         },
-        "default_popup": "popup/popup.html",
+        "default_popup": "popup/index.html",
         "default_title": "Tracking Transparency"
     },
     "background": {
