--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-table": "^6.7.6",
     "react-vis": "^1.8.1",
     "striptags": "^3.1.1",
+    "tape": "^4.9.0",
     "tokenize-text": "^1.1.3",
     "typeface-source-sans-pro": "^0.0.44",
     "webextension-polyfill": "^0.2.1"
