change minify plugin

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint:eslint": "eslint .",
     "lint:webext": "web-ext lint -s extension/",
     "lint": "npm run lint:eslint; npm run lint:webext",
-    "dist": "webpack --progress --config webpack.prod.js && web-ext build -s extension/ --overwrite-dest",
+    "dist": "rm -rf extension/dist && webpack --progress --config webpack.prod.js && web-ext build -s extension/ --overwrite-dest",
     "start": "webpack -w --progress --config webpack.dev.js",
     "watch": "webpack -w --progress --config webpack.dev.js",
     "build": "webpack --progress --config webpack.dev.js",
@@ -17,7 +17,6 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-minify-webpack-plugin": "^0.2.0",
     "babel-plugin-transform-eval": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -28,6 +27,7 @@
     "eslint": "^4.15.0",
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^1.1.6",
+    "gzip-loader": "^0.0.1",
     "jsdoc": "^3.5.5",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
@@ -37,6 +37,7 @@
     "mocha": "^3.4.2",
     "sinon-chrome": "^2.2.1",
     "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "url-loader": "^0.6.2",
     "web-ext": "^2.3.1",
     "webpack": "^3.10.0",
