--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,12 @@
     "no-console": "off",
     "react/prop-types": "off",
     "indent": ["warn", 2],
-    "quotes": ["warn", "single", {"avoidEscape": true}]
+    "quotes": ["warn", "single", {"avoidEscape": true}],
+    "valid-jsdoc": ["warn", {
+      "requireReturn": false,
+      "requireReturnType": false,
+      "requireParamDescription": false,
+      "requireReturnDescription": false
+    }]
   }
 }
