--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/react-fontawesome": "file:node_modules/@fortawesome/react-fontawesome",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bootstrap": "^3.3.7",
@@ -49,6 +51,8 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.6.1",
+    "react-icons": "^2.2.7",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-table": "^6.7.6",
