--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lovefield": "^2.1.12",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
+    "react-d3-cloud": "^0.6.0",
     "react-dom": "^16.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
