--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-table": "^6.7.6",
     "react-vis": "^1.8.1",
     "striptags": "^3.1.1",
+    "tldjs": "^2.3.1",
     "tokenize-text": "^1.1.3",
     "webextension-polyfill": "^0.2.1"
   }
