--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
       "requireReturnType": false,
       "requireParamDescription": false,
       "requireReturnDescription": false
-    }]
+    }],
+    "react/no-deprecated": "off"
   }
 }
