--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
+    "eslint": "^5.1.0",
+    "eslint-plugin-no-unsanitized": "^3.0.2",
     "eslint-plugin-react": "^7.8.2",
     "file-loader": "^1.1.11",
     "foodoc": "^0.0.8",
