--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "lint:eslint": "eslint src",
     "lint:webext": "web-ext lint -s extension/",
     "lint": "npm run lint:eslint; npm run lint:webext",
-    "dist": "rm -rf extension/dist && webpack --progress --config webpack.prod.js && web-ext build -s extension/ --overwrite-dest",
-    "start": "webpack -w --progress --config webpack.dev.js",
-    "watch": "webpack -w --progress --config webpack.dev.js",
-    "build": "webpack --progress --config webpack.dev.js",
+    "dist": "wp --progress --config webpack.prod.js && web-ext build -s extension/ --overwrite-dest",
+    "start": "wp -w --progress --config webpack.dev.js",
+    "watch": "wp -w --progress --config webpack.dev.js",
+    "build": "wp --progress --config webpack.dev.js",
     "firefox": "web-ext run -s extension/ -u 'about:debugging'",
     "jsdoc": "jsdoc -c jsdoc.conf.json ."
   },
@@ -22,23 +22,25 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
     "eslint": "^5.1.0",
     "eslint-plugin-no-unsanitized": "^3.0.2",
     "eslint-plugin-react": "^7.8.2",
     "file-loader": "^1.1.11",
-    "foodoc": "^0.0.8",
+    "foodoc": "^0.0.9",
     "gzip-loader": "^0.0.1",
     "jsdoc": "^3.5.5",
-    "puppeteer": "^1.4.0",
-    "style-loader": "^0.19.1",
-    "tap-spec": "^4.1.1",
+    "mini-css-extract-plugin": "^0.4.1",
+    "puppeteer": "^1.6.0",
+    "style-loader": "^0.21.0",
+    "tap-spec": "^5.0.0",
     "tape": "^4.9.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^0.6.2",
+    "url-loader": "^1.0.1",
     "web-ext": "^2.6.0",
-    "webpack": "^3.12.0",
+    "webpack": "^4.16.0",
+    "webpack-command": "^0.4.1",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
@@ -55,7 +57,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-table": "^6.8.5",
-    "react-vis": "^1.9.3",
+    "react-vis": "^1.10.3",
     "striptags": "^3.1.1",
     "tldjs": "^2.3.1",
     "tokenize-text": "^1.1.3",
