--- a/package.json
+++ b/package.json
@@ -24,15 +24,13 @@
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
-    "eslint": "^5.1.0",
-    "eslint-plugin-no-unsanitized": "^3.0.2",
-    "eslint-plugin-react": "^7.8.2",
     "file-loader": "^1.1.11",
     "foodoc": "^0.0.9",
     "gzip-loader": "^0.0.1",
     "jsdoc": "^3.5.5",
     "mini-css-extract-plugin": "^0.4.1",
     "puppeteer": "^1.6.0",
+    "standard": "^11.0.1",
     "style-loader": "^0.21.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.0",
@@ -62,5 +60,13 @@
     "tldjs": "^2.3.1",
     "tokenize-text": "^1.1.3",
     "webextension-polyfill": "^0.2.1"
+  },
+  "standard": {
+    "ignore": [
+      "doc/",
+      "extension/lib/",
+      "extension/dist/",
+      "src/lightbeam/"
+    ]
   }
 }
