--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "@instructure/ui-buttons": "^5.20.1",
+    "@instructure/ui-elements": "^5.20.1",
     "@instructure/ui-icons": "^5.20.1",
+    "@instructure/ui-layout": "^5.20.1",
+    "@instructure/ui-themes": "^5.20.1",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "html-entities": "^1.2.1",
