--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "webextension-polyfill": "^0.2.1"
   },
   "standard": {
-    "globals": [ "browser" ]
+    "globals": [ "browser" ],
     "ignore": [
       "doc/",
       "extension/lib/",
