--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "@instructure/ui-breadcrumb": "^5.21.0",
     "@instructure/ui-buttons": "^5.20.1",
     "@instructure/ui-elements": "^5.20.1",
     "@instructure/ui-icons": "^5.20.1",
@@ -66,7 +67,9 @@
     "webextension-polyfill": "^0.2.1"
   },
   "standard": {
-    "globals": [ "browser" ],
+    "globals": [
+      "browser"
+    ],
     "ignore": [
       "doc/",
       "extension/lib/",
