--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "@instructure/ui-buttons": "^5.20.1",
-    "@instructure/ui-elements": "^5.20.1",
-    "@instructure/ui-icons": "^5.20.1",
-    "@instructure/ui-layout": "^5.20.1",
-    "@instructure/ui-themes": "^5.20.1",
+    "@instructure/ui-alerts": "^5.22.0",
+    "@instructure/ui-buttons": "^5.22.0",
+    "@instructure/ui-elements": "^5.22.0",
+    "@instructure/ui-icons": "^5.22.0",
+    "@instructure/ui-layout": "^5.22.0",
+    "@instructure/ui-overlays": "^5.22.0",
+    "@instructure/ui-themes": "^5.22.0",
+    "@instructure/ui-toggle-details": "^5.22.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "html-entities": "^1.2.1",
@@ -66,7 +69,9 @@
     "webextension-polyfill": "^0.2.1"
   },
   "standard": {
-    "globals": [ "browser" ],
+    "globals": [
+      "browser"
+    ],
     "ignore": [
       "doc/",
       "extension/lib/",
