--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^1.1.11",
     "foodoc": "^0.0.9",
     "gzip-loader": "^0.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "jsdoc": "^3.5.5",
     "mini-css-extract-plugin": "^0.4.1",
     "puppeteer": "^1.6.0",
