--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-eval": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -57,6 +58,7 @@
     "react-bootstrap": "^0.32.1",
     "react-d3-cloud": "^0.6.0",
     "react-dom": "^16.3.2",
+    "react-loadable": "^5.4.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-table": "^6.8.5",
@@ -67,7 +69,9 @@
     "webextension-polyfill": "^0.2.1"
   },
   "standard": {
-    "globals": [ "browser" ],
+    "globals": [
+      "browser"
+    ],
     "ignore": [
       "doc/",
       "extension/lib/",
