--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "web-ext": "^2.6.0",
     "webpack": "^4.16.0",
     "webpack-command": "^0.4.1",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "worker-loader": "^2.0.0"
   },
   "dependencies": {
     "@instructure/ui-buttons": "^5.20.1",
