--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Provides information about online tracking",
   "scripts": {
     "test": "cd test && node test.js | tap-spec",
-    "lint:eslint": "eslint src",
+    "lint:js": "standardx",
     "lint:webext": "web-ext lint -s extension/",
-    "lint": "npm run lint:eslint; npm run lint:webext",
+    "lint": "npm run lint:js; npm run lint:webext",
     "dist": "wp --progress --config webpack.prod.js && web-ext build -s extension/ --overwrite-dest",
     "start": "wp -w --progress --config webpack.dev.js",
     "watch": "wp -w --progress --config webpack.dev.js",
@@ -32,7 +32,7 @@
     "jsdoc": "^3.5.5",
     "mini-css-extract-plugin": "^0.4.1",
     "puppeteer": "^1.6.0",
-    "standard": "^11.0.1",
+    "standardx": "^2.1.0",
     "style-loader": "^0.21.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.0",
@@ -69,9 +69,10 @@
     "tokenize-text": "^1.1.3",
     "webextension-polyfill": "^0.3.0"
   },
-  "standard": {
+  "standardx": {
     "globals": [
-      "browser"
+      "browser",
+      "import"
     ],
     "ignore": [
       "doc/",
@@ -79,5 +80,12 @@
       "extension/dist/",
       "src/lightbeam/"
     ]
+  },
+  "eslintConfig": {
+    "rules": {
+      "semi": "off",
+      "space-before-function-paren": "off",
+      "quotes": ["off", "single"]
+    }
   }
 }
