--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-router-dom": "^4.2.2",
     "react-table": "^6.8.5",
     "react-vis": "^1.10.3",
+    "snowball": "^0.3.1",
     "striptags": "^3.1.1",
     "tldjs": "^2.3.1",
     "tokenize-text": "^1.1.3",
