--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "file-loader": "^1.1.11",
     "foodoc": "^0.0.9",
     "gzip-loader": "^0.0.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-alpha",
     "jsdoc": "^3.5.5",
     "mini-css-extract-plugin": "^0.4.1",
     "puppeteer": "^1.6.0",
@@ -85,7 +85,10 @@
     "rules": {
       "semi": "off",
       "space-before-function-paren": "off",
-      "quotes": ["off", "single"]
+      "quotes": [
+        "off",
+        "single"
+      ]
     }
   }
 }
