--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -44,7 +44,7 @@
         }
     ],
     "options_ui": {
-        "page": "options/options.html",
+        "page": "dist/options.html",
         "browser_style": true,
         "chrome_style": true
     },
