--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "html-entities": "^1.2.1",
     "lodash": "^4.17.10",
     "lovefield": "^2.1.12",
+    "moment": "^2.22.2",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-d3-cloud": "^0.6.0",
