organize overlay code

--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
   },
   "standardx": {
     "globals": [
-      "browser"
+      "browser",
+      "chrome"
     ],
     "ignore": [
       "doc/",
