--- a/package.json
+++ b/package.json
@@ -32,34 +32,34 @@
     "file-version-bump": "0.0.2",
     "foodoc": "^0.0.9",
     "gzip-loader": "^0.0.1",
-    "html-webpack-plugin": "^4.0.0-alpha",
+    "html-webpack-plugin": "^4.0.0-alpha.2",
     "jsdoc": "^3.5.5",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.2",
     "puppeteer": "^1.6.1",
     "standardx": "^2.1.0",
     "style-loader": "^0.21.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^1.0.1",
-    "web-ext": "^2.6.0",
-    "webpack": "^4.16.3",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.1.1",
+    "web-ext": "^2.9.1",
+    "webpack": "^4.17.2",
     "webpack-command": "^0.4.1",
     "webpack-merge": "^4.1.2",
     "worker-loader": "^2.0.0"
   },
   "dependencies": {
-    "@instructure/ui-alerts": "^5.22.0",
-    "@instructure/ui-breadcrumb": "^5.22.0",
-    "@instructure/ui-buttons": "^5.20.1",
-    "@instructure/ui-elements": "^5.20.1",
-    "@instructure/ui-forms": "^5.22.0",
-    "@instructure/ui-icons": "^5.20.1",
-    "@instructure/ui-layout": "^5.20.1",
-    "@instructure/ui-overlays": "^5.22.0",
-    "@instructure/ui-themes": "^5.20.1",
-    "@instructure/ui-toggle-details": "^5.22.0",
-    "@tensorflow/tfjs": "^0.12.4",
+    "@instructure/ui-alerts": "^5.25.0",
+    "@instructure/ui-breadcrumb": "^5.25.0",
+    "@instructure/ui-buttons": "^5.25.0",
+    "@instructure/ui-elements": "^5.25.0",
+    "@instructure/ui-forms": "^5.25.0",
+    "@instructure/ui-icons": "^5.25.0",
+    "@instructure/ui-layout": "^5.25.0",
+    "@instructure/ui-overlays": "^5.25.0",
+    "@instructure/ui-themes": "^5.25.0",
+    "@instructure/ui-toggle-details": "^5.25.0",
+    "@tensorflow/tfjs": "^0.12.7",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "html-entities": "^1.2.1",
@@ -67,19 +67,19 @@
     "lovefield": "^2.1.12",
     "moment": "^2.22.2",
     "react": "^16.3.2",
-    "react-bootstrap": "^0.32.1",
+    "react-bootstrap": "^0.32.3",
     "react-d3-cloud": "^0.6.0",
     "react-dom": "^16.3.2",
     "react-loadable": "^5.4.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-table": "^6.8.5",
-    "react-vis": "^1.10.3",
+    "react-vis": "^1.10.8",
     "snowball": "^0.3.1",
     "striptags": "^3.1.1",
     "tldjs": "^2.3.1",
     "tokenize-text": "^1.1.3",
-    "webextension-polyfill": "^0.3.0"
+    "webextension-polyfill": "^0.3.1"
   },
   "standardx": {
     "globals": [
