--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "wp -w --progress --config webpack.dev.js",
     "watch": "wp -w --progress --config webpack.dev.js",
     "build": "wp --progress --config webpack.dev.js",
+    "preversion": "npm run build && npm run test",
     "version": "file-version-bump",
     "firefox": "web-ext run -s extension/ -u 'about:debugging'",
     "chromium": "node test/chromium.js",
