clean up package[-lock].json

--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.0.7",
   "description": "Provides information about online tracking",
   "scripts": {
-    "test": "tape test/test.js | tap-spec",
+    "build": "wp --progress --config webpack.dev.js",
+    "chromium": "node test/chromium.js",
+    "dist": "wp --progress --config webpack.prod.js && web-ext build -s extension/ --overwrite-dest",
+    "firefox": "web-ext run -s extension/ -u 'about:debugging'",
+    "jsdoc": "jsdoc -c jsdoc.conf.json .",
+    "lint": "npm run lint:js; npm run lint:webext",
     "lint:js": "standardx",
     "lint:webext": "web-ext lint -s extension/",
-    "lint": "npm run lint:js; npm run lint:webext",
-    "dist": "wp --progress --config webpack.prod.js && web-ext build -s extension/ --overwrite-dest",
-    "start": "wp -w --progress --config webpack.dev.js",
-    "watch": "wp -w --progress --config webpack.dev.js",
-    "build": "wp --progress --config webpack.dev.js",
     "preversion": "npm run build && npm run test",
+    "start": "wp -w --progress --config webpack.dev.js",
+    "test": "tape test/test.js | tap-spec",
     "version": "file-version-bump",
-    "firefox": "web-ext run -s extension/ -u 'about:debugging'",
-    "chromium": "node test/chromium.js",
-    "jsdoc": "jsdoc -c jsdoc.conf.json ."
+    "watch": "wp -w --progress --config webpack.dev.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -59,7 +59,6 @@
     "@instructure/ui-overlays": "^5.25.0",
     "@instructure/ui-themes": "^5.25.0",
     "@instructure/ui-toggle-details": "^5.25.0",
-    "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "lodash": "^4.17.10",
     "lovefield": "^2.1.12",
