--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-loadable": "^5.4.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
+    "react-sizeme": "^2.5.2",
     "react-table": "^6.8.5",
     "react-vis": "^1.10.8",
     "snowball": "^0.3.1",
