--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "lodash": "^4.17.10",
     "lovefield": "^2.1.12",
     "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.3",
     "react-d3-cloud": "^0.6.0",
