--- a/package.json
+++ b/package.json
@@ -94,6 +94,9 @@
     "parser": "babel-eslint",
     "parserOptions": {
       "allowImportExportEverywhere": true
+    },
+    "rules": {
+      "semi": 0
     }
   },
   "file-version-bump": [
