--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Provides information about online tracking",
   "scripts": {
     "build": "wp --progress --config webpack.dev.js",
-    "chromium": "node test/chromium.js",
-    "dist": "wp --progress --config webpack.prod.js && web-ext build -s extension/ --overwrite-dest",
-    "firefox": "web-ext run -s extension/ -u 'about:debugging'",
+    "build:prod": "wp --progress --config webpack.prod.js",
+    "dist": "npm run build:prod && web-ext build -s extension/ --overwrite-dest",
     "jsdoc": "jsdoc -c jsdoc.conf.json .",
     "lint": "npm run lint:js; npm run lint:webext",
     "lint:js": "standardx",
     "lint:webext": "web-ext lint -s extension/",
     "preversion": "npm run build && npm run test",
-    "start": "wp -w --progress --config webpack.dev.js",
+    "start:chromium": "node test/chromium.js",
+    "start:firefox": "web-ext run -s extension/ -u 'about:debugging'",
     "test": "tape test/test.js | tap-spec",
     "version": "file-version-bump",
     "watch": "wp -w --progress --config webpack.dev.js"
