--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "worker-loader": "^2.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-brands-svg-icons": "^5.3.1",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@instructure/ui-alerts": "^5.25.0",
     "@instructure/ui-breadcrumb": "^5.25.0",
     "@instructure/ui-buttons": "^5.25.0",
