--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@instructure/ui-themes": "^5.25.0",
     "@instructure/ui-toggle-details": "^5.25.0",
     "babel-runtime": "^6.26.0",
+    "d3-scale": "^2.1.2",
     "lodash": "^4.17.10",
     "lovefield": "^2.1.12",
     "moment": "^2.22.2",
