report whether tracker blocker enabled

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,6 +17,7 @@
         "tabs",
         "alarms",
         "management",
+        "privacy",
         "webRequest",
         "webNavigation",
         "<all_urls>"
