--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -24,8 +24,8 @@
         ],
     "browser_action": {
         "default_icon": {
-        "19": "icons/super-19.png",
-        "38": "icons/super-38.png"
+        "19": "icons/logo19.png",
+        "38": "icons/logo38.png"
         },
         "default_popup": "dist/popup.html",
         "default_title": "Tracking Transparency"
@@ -47,13 +47,13 @@
         }
     ],
     "icons": {
-        "128": "icons/super-128.png",
-        "16": "icons/super-16.png",
-        "170": "icons/super-170.png",
-        "19": "icons/super-19.png",
-        "24": "icons/super-24.png",
-        "32": "icons/super-32.png",
-        "38": "icons/super-38.png",
-        "48": "icons/super-48.png"
+        "128": "icons/logo128.png",
+        "16": "icons/logo16.png",
+        "170": "icons/logo170.png",
+        "19": "icons/logo19.png",
+        "24": "icons/logo24.png",
+        "32": "icons/logo32.png",
+        "38": "icons/logo38.png",
+        "48": "icons/logo48.png"
   }
 }
