scaffolding for notifications

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,6 +17,7 @@
         "tabs",
         "alarms",
         "management",
+        "notifications",
         "privacy",
         "webRequest",
         "webNavigation",
