--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
   "standardx": {
     "globals": [
       "browser",
-      "chrome"
+      "chrome",
+      "EXT_VERSION"
     ],
     "ignore": [
       "doc/",
