--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "build": "wp --progress --config webpack.dev.js",
     "build:prod": "wp --progress --config webpack.prod.js",
     "build:watch": "wp -w --progress --config webpack.dev.js",
-    "dist": "npm run build:prod && web-ext build -s extension/ --overwrite-dest",
+    "dist": "npm run build:prod && web-ext build -s extension/",
     "jsdoc": "jsdoc -c jsdoc.conf.json .",
     "lint": "npm run lint:js; npm run lint:webext",
     "lint:js": "standardx",
     "lint:webext": "web-ext lint -s extension/",
-    "preversion": "npm run build && npm run test",
+    "preversion": "npm run build:prod && npm run test",
     "start:chromium": "node test/chromium.js",
     "start:firefox": "web-ext run -s extension/ -u 'about:addons' -u 'about:debugging' -u 'https://super.cs.uchicago.edu/'",
     "test": "tape test/test.js | tap-spec",
