--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "babel-runtime": "^6.26.0",
     "d3": "^5.7.0",
     "d3-scale": "^2.1.2",
+    "enzyme": "^3.11.0",
     "lodash": "^4.17.11",
     "lovefield": "^2.1.12",
     "moment": "^2.22.2",
