--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trackingtransparency",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Provides information about online tracking",
   "scripts": {
     "build": "webpack --progress --config webpack.dev.js",
@@ -19,15 +19,18 @@
     "watch": "npm run build:watch"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-eval": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
@@ -37,11 +40,12 @@
     "html-webpack-plugin": "^4.0.0-alpha.2",
     "jsdoc": "^3.6.2",
     "mini-css-extract-plugin": "^0.6.0",
-    "puppeteer": "1.9.*",
+    "puppeteer": "^1.20.0",
+    "react-alice-carousel": "^2.5.1",
     "standardx": "^2.1.0",
-    "tap-spec": "^5.0.0",
+    "tap-spec": "^2.2.2",
     "tape": "^4.10.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
+    "uglifyjs-webpack-plugin": "^1.1.2",
     "url-loader": "^1.1.2",
     "web-ext": "^3.0.0",
     "webpack": "4.28.4",
@@ -51,8 +55,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
-    "@fortawesome/free-brands-svg-icons": "^5.3.1",
-    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@instructure/ui-alerts": "^5.25.0",
     "@instructure/ui-breadcrumb": "^5.25.0",
@@ -65,26 +68,75 @@
     "@instructure/ui-tabs": "^5.25.0",
     "@instructure/ui-themes": "^5.25.0",
     "@instructure/ui-toggle-details": "^5.25.0",
+    "@material-ui/core": "^4.12.3",
+    "@mootable/hashmap": "^1.0.7",
+    "@mozilla/readability": "^0.4.1",
+    "@tensorflow/tfjs": "^3.11.0",
+    "axios": "^0.24.0",
     "babel-runtime": "^6.26.0",
     "d3": "^5.7.0",
     "d3-scale": "^2.1.2",
-    "enzyme": "^3.11.0",
+    "dexie": "^3.0.3",
+    "dexie-export-import": "^1.0.3",
+    "echarts": "^5.2.1",
+    "echarts-for-react": "^3.0.1",
+    "font-awesome": "^4.7.0",
+    "grommet": "^2.19.1",
+    "grommet-icons": "^4.6.2",
+    "group-by-time": "^1.0.0",
+    "highcharts": "^9.2.2",
+    "highcharts-border-radius": "0.0.4",
+    "highcharts-react-official": "^3.0.0",
+    "iframe-resizer-react": "^1.1.0",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.11",
     "lovefield": "^2.1.12",
     "moment": "^2.22.2",
+    "node-html-parser": "^5.1.0",
+    "node-self": "^1.0.0-c",
+    "onnxjs": "^0.1.8",
+    "papaparse": "^5.3.1",
+    "predictage": "^4.0.1",
+    "predictgender": "^4.0.0",
     "prop-types": "^15.6.2",
+    "rainbowvis.js": "^1.0.1",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.3",
+    "react-bubble-chart": "^0.4.0",
+    "react-circular-progressbar": "^2.0.4",
+    "react-code-blocks": "^0.0.9-0",
     "react-d3-cloud": "^0.6.0",
+    "react-d3-tree": "^3.1.1",
+    "react-day-hour-heatmap": "^0.1.7",
     "react-dom": "^16.3.2",
+    "react-fontawesome": "^1.7.1",
+    "react-heatmap-grid": "^0.8.2",
+    "react-hour-heatmap": "^1.0.0-2",
+    "react-html-parser": "^2.0.2",
+    "react-iframe": "^1.8.0",
+    "react-intersection-observer": "^8.32.5",
     "react-loadable": "^5.4.0",
+    "react-player": "^2.9.0",
+    "react-popover": "^0.5.10",
+    "react-responsive-carousel": "^3.2.21",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-sizeme": "^2.5.2",
+    "react-slick": "^0.28.1",
+    "react-srcdoc-iframe": "^1.0.2",
     "react-table": "^6.8.5",
     "react-vis": "^1.10.8",
+    "request-promise": "^4.2.6",
+    "seedrandom": "^3.0.5",
+    "simple-storage": "^4.0.2",
     "snowball": "^0.3.1",
-    "tldjs": "^2.3.1"
+    "stats-lite": "^2.2.0",
+    "string-similarity-js": "^2.1.4",
+    "styled-components": "^5.3.3",
+    "tabs": "^0.2.0",
+    "tldjs": "^2.3.1",
+    "url-knife": "^3.1.3",
+    "webpack-chrome-extension-reloader": "^1.3.0"
   },
   "standardx": {
     "globals": [
@@ -110,5 +162,20 @@
   },
   "file-version-bump": [
     "extension/manifest.json"
-  ]
+  ],
+  "main": "webpack.common.js",
+  "directories": {
+    "doc": "doc",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/UChicagoSUPERgroup/trackingtransparency.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/UChicagoSUPERgroup/trackingtransparency/issues"
+  },
+  "homepage": "https://github.com/UChicagoSUPERgroup/trackingtransparency#readme"
 }
