--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trackingtransparency",
-  "version": "2.0.0",
+  "version": "2.0.18",
   "description": "Provides information about online tracking",
   "scripts": {
     "build": "webpack --progress --config webpack.dev.js",
@@ -57,6 +57,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@googlemaps/markerclustererplus": "^1.2.10",
+    "@googlemaps/react-wrapper": "^1.1.30",
     "@instructure/ui-alerts": "^5.25.0",
     "@instructure/ui-breadcrumb": "^5.25.0",
     "@instructure/ui-buttons": "^5.25.0",
@@ -71,7 +73,9 @@
     "@material-ui/core": "^4.12.3",
     "@mootable/hashmap": "^1.0.7",
     "@mozilla/readability": "^0.4.1",
+    "@react-google-maps/api": "^2.8.1",
     "@tensorflow/tfjs": "^3.11.0",
+    "ahocorasick": "^1.0.2",
     "axios": "^0.24.0",
     "babel-runtime": "^6.26.0",
     "d3": "^5.7.0",
@@ -81,6 +85,8 @@
     "echarts": "^5.2.1",
     "echarts-for-react": "^3.0.1",
     "font-awesome": "^4.7.0",
+    "google-map-react": "^2.1.10",
+    "google-maps-react": "^2.0.6",
     "grommet": "^2.19.1",
     "grommet-icons": "^4.6.2",
     "group-by-time": "^1.0.0",
@@ -88,6 +94,7 @@
     "highcharts-border-radius": "0.0.4",
     "highcharts-react-official": "^3.0.0",
     "iframe-resizer-react": "^1.1.0",
+    "ifvisible": "^1.1.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.11",
     "lovefield": "^2.1.12",
@@ -95,13 +102,16 @@
     "node-html-parser": "^5.1.0",
     "node-self": "^1.0.0-c",
     "onnxjs": "^0.1.8",
+    "p-min-delay": "^4.0.1",
+    "p-wait-for": "^4.1.0",
     "papaparse": "^5.3.1",
     "patch-package": "^6.4.7",
     "predictage": "^4.0.1",
     "predictgender": "^4.0.0",
     "prop-types": "^15.6.2",
     "rainbowvis.js": "^1.0.1",
-    "react": "^16.3.2",
+    "react": "^16.14.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^0.32.3",
     "react-bubble-chart": "^0.4.0",
     "react-circular-progressbar": "^2.0.4",
@@ -109,7 +119,7 @@
     "react-d3-cloud": "^0.6.0",
     "react-d3-tree": "^3.1.1",
     "react-day-hour-heatmap": "^0.1.7",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.14.0",
     "react-fontawesome": "^1.7.1",
     "react-heatmap-grid": "^0.8.2",
     "react-hour-heatmap": "^1.0.0-2",
@@ -120,15 +130,20 @@
     "react-player": "^2.9.0",
     "react-popover": "^0.5.10",
     "react-responsive-carousel": "^3.2.21",
+    "react-rewards": "^1.1.2",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
+    "react-router-hash-link": "^2.4.3",
+    "react-scrollable-anchor": "^0.6.1",
     "react-sizeme": "^2.5.2",
     "react-slick": "^0.28.1",
     "react-srcdoc-iframe": "^1.0.2",
     "react-table": "^6.8.5",
     "react-vis": "^1.10.8",
+    "redux": "^4.2.0",
     "request-promise": "^4.2.6",
     "seedrandom": "^3.0.5",
+    "simple-react-google-maps": "^1.1.2",
     "simple-storage": "^4.0.2",
     "snowball": "^0.3.1",
     "stats-lite": "^2.2.0",
@@ -137,6 +152,7 @@
     "tabs": "^0.2.0",
     "tldjs": "^2.3.1",
     "url-knife": "^3.1.3",
+    "urldecode": "^1.0.1",
     "webpack-chrome-extension-reloader": "^1.3.0"
   },
   "standardx": {
